fix: various layout component min-width in flexbox for overflow

--- a/packages/void-ui/src/components/layout/article/article.scss
+++ b/packages/void-ui/src/components/layout/article/article.scss
@@ -3,8 +3,9 @@
  */
 @include comp('article') {
   position: relative;
-  flex: 1 0 100%;
+  flex: 1 1 100%;
   max-width: 100%;
+  min-width: 0;
 
   padding: rem($gap-base) 0;
   margin: rem(-$gap-base) 0;
