--- a/packages/void-ui/src/components/layout/card/card.scss
+++ b/packages/void-ui/src/components/layout/card/card.scss
@@ -3,7 +3,7 @@
  */
 @include comp('card') {
   position: relative;
-  flex: 1 0 100%;
+  flex: 1 1 100%;
   max-width: 100%;
   min-width: 0;
 
@@ -29,6 +29,8 @@
   & > video {
     position: relative;
     max-width: 100%;
+    min-height: 0;
+    max-height: 100%;
   }
 
   @include elem('header', 'footer', 'content', 'title', 'sub-content', 'divider') {
@@ -40,6 +42,9 @@
 
   @include elem('header', 'footer', 'content') {
     display: block;
+    max-width: 100%;
+    min-width: 0;
+    max-height: 100%;
     min-height: rem($card-header-height + $border-base);
     padding: 0;
     margin: 0;
@@ -218,6 +223,10 @@
         align-content: flex-start;
         align-items: flex-start;
 
+        & > img,
+        & > video {
+          flex: 1;
+        }
         @include elem('header', 'footer', 'content') {
           flex: 1;
         }
@@ -226,6 +235,10 @@
           height: 100%;
         }
       } @else {
+        & > img,
+        & > video {
+          flex: none;
+        }
         @include elem('header', 'footer', 'content') {
           flex: none;
         }
