--- a/packages/void-ui/src/components/layout/flow/flow.scss
+++ b/packages/void-ui/src/components/layout/flow/flow.scss
@@ -3,8 +3,9 @@
  */
 @include comp('swimlane') {
   position: relative;
-  flex: 1 0 100%;
+  flex: 1 1 100%;
   max-width: 100%;
+  min-width: 0;
 
   padding: rem($swimlane-padding) 0;
 
@@ -39,7 +40,9 @@
 @include comp('container') {
   position: relative;
   margin: 0 auto;
+  flex: 1 1 100%;
   max-width: 100%;
+  min-width: 0;
 
   @each $screen, $value in $container-width-map {
     @include media-only($screen) {
