--- a/packages/void-ui/src/components/layout/uniform-scale/uniform-scale.scss
+++ b/packages/void-ui/src/components/layout/uniform-scale/uniform-scale.scss
@@ -3,8 +3,9 @@
  */
 @include comp('uniform-scale') {
   position: relative;
-  flex: 1 0 100%;
+  flex: 1 1 100%;
   max-width: 100%;
+  min-width: 0;
 
   @include elem('brace') {
     padding-bottom: 100%;
